--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,4 @@
 @import './Assets/Styles/Banner.scss';
 @import './Assets/Styles/quality.scss';
 @import './Assets/Styles/About.scss';
+@import './Assets/Styles/Countdown.scss';
