--- a/src/Assets/Styles/About.scss
+++ b/src/Assets/Styles/About.scss
@@ -11,7 +11,8 @@ $text-color:#555555;
 }
 
 .about_sec{
-    padding:80px 0;
+    padding-top:80px;
+    padding-bottom:130px;
     width:100%;
     background:$white-color;
     position: relative;
@@ -64,13 +65,50 @@ $text-color:#555555;
         }
     }
     .about-img{
-        position: relative;
+        position:relative;
         width:100%;
-        clip-path:polygon(0 0, 100% 0, 100% 100%, 20% 100%);
-        img{
+      
+        .about-imgs{
             position: relative;
-            width:100%;
-            clip-path:polygon(0 0, 100% 0, 100% 100%, 20% 100%);
+            z-index: 1;
+            &::before{
+                position: absolute;
+                content: "";
+                width:620px;
+                height:460px;
+                right: -116.5px;
+                top: -180px;
+                background-image: url(../Images/about-img.jpg);
+                background-position: right;
+                background-repeat: no-repeat;
+                background-size: cover;
+                clip-path:polygon(0 0, 100% 0, 100% 100%, 20% 100%);
+            }
+            &::after{
+                position: absolute;
+                content: "";
+                width:635px;
+                height:460px;
+                right: -116.5px;
+                top: -180px;
+                background-color:white;
+                clip-path:polygon(0 0, 100% 0, 100% 100%, 20% 100%);
+                z-index: -1;
+            }
+        }
+
+        .about-img-shape1{
+            position: relative;
+            &::before{
+                position: absolute;
+                content: "";
+                width:650px;
+                height:460px;
+                right: -116.5px;
+                top: -165px;
+                background-color:  #fd5d14;
+                clip-path:polygon(0 0, 100% 0, 100% 100%, 20% 100%);
+            }
         }
     }
 }
