--- a/src/Assets/Styles/quality.scss
+++ b/src/Assets/Styles/quality.scss
@@ -11,9 +11,12 @@ $text-color:#555555;
 }
 
 .quality_sec{
-    padding:80px 0;
+    padding-top:80px;
+    padding-bottom:180px;
     width:100%;
     background:$white-color;
+    position: relative;
+    z-index: 1;
     .quality_heading{
         width:100%;
         margin-bottom:50px;
@@ -77,7 +80,7 @@ $text-color:#555555;
         .quality_card_body{
             text-align:center;
             a{
-                @include title(20px ,600 );
+                @include title(22px ,700 );
                 color:$title-color;
                 margin:0;
                 font-family: "Poppins", serif;
