--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,5 @@
 @import './Assets/Styles/quality.scss';
 @import './Assets/Styles/About.scss';
 @import './Assets/Styles/Countdown.scss';
+@import './Assets/Styles/Recent-project.scss';
+@import './Assets/Styles/Video.scss';
