--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,4 @@
 @import './Assets/Styles/Countdown.scss';
 @import './Assets/Styles/Recent-project.scss';
 @import './Assets/Styles/Video.scss';
+@import './Assets/Styles/Service.scss';
